--- a/about/index.html
+++ b/about/index.html
@@ -69,7 +69,7 @@
           </h1>
 
           
-            <div class="site-description">.NET and Sitecore Techology Blogs</div>
+            <div class="site-description">My Experiments with Tech Blogging</div>
                    
 
           <nav id="main-navigation" class="main-navigation" role="navigation">
@@ -346,7 +346,7 @@
 	      &copy; 2017 Suhas Blog All Rights Reserved.
       </div>
       <div class="site-credit">
-        Theme by <a href="https://github.com/iTimeTraveler/hexo-theme-hiero" target="_blank">hiero</a>
+        Powered by <a href="https://hexo.io/" target="_blank">Hexo</a>
       </div>
   </div>
 </footer>
@@ -359,6 +359,7 @@
 
     contentdiv.style.minHeight = document.body.offsetHeight - document.getElementById("allheader").offsetHeight - document.getElementById("footer").offsetHeight + "px";
 </script>
+
     </div>
     <!-- <nav id="mobile-nav">
   
